FLUID-6008: fix button contrast after upload.

--- a/src/components/uploader/css/Uploader.css
+++ b/src/components/uploader/css/Uploader.css
@@ -319,7 +319,7 @@ html>body .fl-uploader span.fl-uploader-browse {
 
 /* upload button */
 .fl-uploader-buttons .fl-uploader-button-upload {
-    background-color: #74B74A;
+    background-color: #468600;
     border-color: #006838;
 }
 
